# unitarity-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  GEOMETRIC_BRAIN.md  README.md  SECURITY.md  SUPPORT.md  index.html  manifesto.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  repro_dual_link_shape.py  run_community.py  setup.py  smoke_test.py  start_node.py  test_active_mode.py  validate_text.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
benchmarks/: __init__.py  _harness.py  adversarial_safety.py  agent_instruct.py  gsm8k.py  humaneval_plus.py
core/: __init__.py  bridge.py  casimir_opt.py  chronos_lock.py  dashboard.py  diversity_snapshot.py  dual_link.py  flux.py  ghost_layer.py  gue_loss.py  handshake.py  horizons.py  kill_switch.py  metrics.py  mirror.py  orchestrator.py  pll_monitor.py  precision_projector.py  resonance_kernel.py  semantic_lock.py  spectral_monitor.py  unitary_regulator.py  universal_hook.py  version.py
datapack/: train.jsonl  val.jsonl
labs/: __init__.py  flux.py  mirror.py  semantic_lock.py  topology_metrics.py
notebooks/: gemma4_starter.ipynb
scripts/: bench_dual_link_reliability.py
tests/: conftest.py  test_bocpd.py  test_byzantine.py  test_chronos_lock.py  test_criticality.py  test_dual_link.py  test_geometric_rigidity.py  test_ghost_layer.py  test_gue_loss.py  test_hardening.py  test_mirror.py  test_semantic_lock.py  test_uncertainty.py  test_virtual_layer13.py
unitarity_labs/: cli.py
(+40 files in other folders)
