[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitarity-lab"
version = "3.0.0"
description = "Experimental multi-model runtime for transformer instrumentation, latent alignment tracing, distributed coordination"
readme = "README.md"
authors = [{name = "holeyfield33-art"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "rich>=13.0",
    "pyzmq>=25.0",
    "safetensors>=0.4",
    "msgpack>=1.0",
    "reedsolo>=1.5",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/holeyfield33-art/unitarity-lab"
Repository = "https://github.com/holeyfield33-art/unitarity-lab.git"

[project.scripts]
unitarity-start = "start_node:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "benchmarks", "benchmarks.*"]
